--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zafran yang ke-8</title>
-
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Lato&display=swap" rel="stylesheet">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
     <script>
@@ -29,7 +26,6 @@
             })
         })
     </script>
-    
     <style>
         *, body, html {
             margin: 0;
@@ -86,18 +82,15 @@
             font-weight: normal;
         }
     </style>
-
 </head>
-
 <body>
-
     <marquee behavior="" direction="">Selamat ulang tahun zafran yang ke-8 yaaaaaa 🤭</marquee>
     <div class="container" id="main">
         <img src="https://www.simpleimageresizer.com/_uploads/photos/49029cde/IMG_20220707_160416_copy_300x300_99.jpg" alt="profile">
         <h6>Halo Zafran 😀<h6/>
         <br/>
         <p>Ini hadiah ulang tahun dari Kakak Vicky</p>
-        <p>Klik tombol ini yaaa😙</p>
+        <p>Klik tombol ini yaaa 😙</p>
         <!-- <p>⬇</p> -->
         <button onclick="lanjut()" type="button">HBD MAS ZA 🥳</button>
     </div>
@@ -115,7 +108,7 @@
                 imageWidth: 125, imageHeight: 135,
             });
             await Swal.fire({
-                title: "Sudah umur 8 tahun aja ya nich🥱",
+                title: "Sudah umur 8 tahun aja ya nich 🥱",
                 imageUrl: "https://thumbs.gfycat.com/HatefulEasygoingDormouse-max-1mb.gif",
                 imageWidth: 120, imageHeight: 125,
             });
@@ -125,12 +118,11 @@
                 imageWidth: 120, imageHeight: 125,
             });
             await Swal.fire({
-                title: "Nanti tiket kereta api nya gratis lhoo 😝",
+                title: "Nanti tiket kereta api nya gratisin lhoo 😝",
                 imageUrl: "https://i.pinimg.com/originals/f0/dc/0c/f0dc0c5f0e1ffbc04d4ab8b512fefacd.gif",
                 imageWidth: 120, imageHeight: 125,
             });
         }
     </script>
-
 </body>
 </html>
