menambahkan foto profil

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <marquee behavior="" direction="">Selamat ulang tahun zafran yang ke-8 yaaaaaa 🤭</marquee>
     <div class="container" id="main">
-        <img src="https://www.simpleimageresizer.com/_uploads/photos/49029cde/IMG_20220707_160416_copy_300x300_99.jpg" alt="profile">
+        <img src="zafran_profil.jpg" alt="profile">
         <h6>Halo Zafran 😀<h6/>
         <br/>
         <p>Ini hadiah ulang tahun dari Kakak Vicky</p>
